resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_size_info-5.snap
---
source: resym_core/tests/type_reconstruction.rs
assertion_line: 184
expression: reconstructed_type
---
struct resym_test::StructTest {
  /* 0x0008 */ unsigned char u1;
  /* 0x000a */ uint16_t u2;
  /* 0x000c */ uint32_t u3;
  /* 0x0010 */ uint64_t u4;
  static uint64_t su5;
  
  StructTest(const resym_test::StructTest&);
  StructTest();
  ~StructTest();
  void* GetPtr();
  void* ConstMethod() const;
  void* VolatileMethod() volatile;
  void* ConstVolatileMethod() const volatile;
  void (*ReturnFuncPointerMethod())(int32_t);
  virtual int32_t Virtual();
  resym_test::StructTest& operator=(const resym_test::StructTest&);
  void* __vecDelDtor(uint32_t);
  
  static int32_t Magic();
  static int32_t MagicVar1(...);
  static int32_t MagicVar2(int32_t, ...);
};
