resym_core/tests/snapshots/type_reconstruction__type_reconstruction_automatic_access_specifiers-15.snap
---
source: resym_core/tests/type_reconstruction.rs
assertion_line: 184
expression: reconstructed_type
---
class resym_test::ClassWithRefsAndStaticsTest { /* Size=0x40 */
  /* 0x0000 */ private: int32_t& iref;
  /* 0x0008 */ private: const int32_t& ciref;
  /* 0x0010 */ private: int32_t* iptr;
  /* 0x0018 */ private: const int32_t* ciptr;
  /* 0x0020 */ private: bool& bref;
  /* 0x0028 */ private: const bool& cbref;
  /* 0x0030 */ private: bool* bptr;
  /* 0x0038 */ private: const bool* cbptr;
  private: static int32_t sint;
  private: static bool sbool;
  
  public: ClassWithRefsAndStaticsTest();
  public: void __autoclassinit2(uint64_t);
};
